# FMC_173

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/client/audio/: ATTRIBUTIONS.md
assets/client/blocks/: air.json  birch_leaves.json  birch_log.json  chest.json  coal_ore.json  cobbelstone.json  cobblestone.json  cobblestone_slab.json  crafting_table.json  default_block.json  default_non_solid_block.json  diamond_block.json  diamond_ore.json  dirt.json  furnace.json  furnace_on.json  glass.json  gold_block.json  gold_ore.json  grass.json  iron_block.json  iron_ore.json  ladder.json  oak.json  oak_door.json  oak_planks.json  oak_slab.json  oak_stairs.json  sand.json  sandstone.json  soil.json  stone.json  stone_slab.json  tall_grass.json  torch.json  wheat_0.json  wheat_1.json  wheat_2.json  wheat_3.json  wheat_4.json  (+3 more)
assets/client/interfaces/: chest.json  crafting_table.json  furnace.json  inventory.json
assets/client/materials/: birch_leaves.json
crates/creative/: Cargo.toml
crates/movement/: Cargo.toml
crates/movement/src/: lib.rs
plugins/movement/: Cargo.toml
src/: assets.rs  chat.rs  explosions.rs  lib.rs  main.rs  settings.rs  skybox.rs
src/items/: arrows.rs  bread.rs  dropped_items.rs  hoes.rs  mod.rs  seeds.rs  spawn_crates.rs
src/mobs/: cow.rs  creeper.rs  duck.rs  mod.rs  pathfinding.rs  skeleton.rs  spider.rs  zombie.rs
src/players/: hand.rs  health.rs  inventory_interface.rs  mod.rs  movement.rs
src/world/: biomes.rs  mod.rs
utils/item_image_to_model/: Cargo.toml
utils/make_liquid/: water.py
(+222 files in other folders)
