[package]
name = "fmc_173"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/awowogei/fmc_173"
description = "fmc 173"

[dependencies]
fmc = { version = "0.0.5", git = "https://github.com/formulaicgame/fmc" }
# fmc = { version = "0.0.5", path = "../fmc/fmc"}

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
futures-lite = "2.6.1"
rusqlite = { version = "0.40.1", features = ["bundled"]}
bincode = "1.3.3"
indexmap = "2.14.0"
tar = "0.4.46"
zstd = "0.13.3"
smallvec = "1.15.2"

[build-dependencies]
cargo_metadata = "0.23.1"
toml = "1.1.2"
tar = "0.4.46"
zstd = "0.13.3"

[profile.dev]
opt-level = 1 # Enable a small amount of optimization in debug mode
strip = "debuginfo" # reduce binary size

[profile.dev.package."*"]
opt-level = 3
# TODO: The procedural noise is 10-20x slower with debug assertions on. The
# standard library has some debug asserts in the vec module. Probably from the
# set_len method. Try to remove the method.
debug-assertions = false

# [profile.release]
# strip = true
